--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="headercontainer">
-			<a href="index.html">
+			<a href="index.html" class = "logolink">
 				<div class="logo"><h1>Kevin Kung</h1></div>
 			</a>
 			<nav>
